<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment">


    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:id="@+id/relative2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/bg_nav_bottom"
            android:elevation="6dp"
            app:layout_constraintBottom_toBottomOf="parent">


            <ImageView
                android:id="@+id/about_pic"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="12dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/ic_info_outline_black_24dp" />


            <TextView
                android:id="@+id/text_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="17dp"
                android:gravity="left"
                android:text="@string/top_profile"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />


        </RelativeLayout>


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/my_image"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/me"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/grey"/>

        <TextView
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/my_image"
            android:text="@string/txt_name"
            android:gravity="left"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />


        <TextView
            android:id="@+id/my_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="95dp"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/my_image"
            android:text="@string/my_name"
            android:gravity="left"
            android:textSize="14sp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/text_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="115dp"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/my_image"
            android:text="@string/txt_about"
            android:gravity="left"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/about_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="135dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_toRightOf="@+id/my_image"
            android:text="@string/about_profile"
            android:textSize="12sp"
            android:textColor="@color/black"
            />


        <View
            android:id="@+id/about_view"
            android:layout_width="400dp"
            android:layout_height="2dp"
            android:layout_below="@+id/about_desc"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:background="@color/black" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/sosmed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/contact_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/contact_me"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold" />



        <ImageView
            android:id="@+id/ig_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contact_me"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="35dp"
            android:adjustViewBounds="true"
            android:maxWidth="80dp"
            android:maxHeight="80dp"
            android:scaleType="fitStart"
            android:src="@drawable/instagram"
            tools:ignore="NotSibling" />


        <TextView
            android:id="@+id/txt_instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="45dp"
            android:layout_below="@+id/ig_pic"
            android:text="@string/instagram"
            android:textSize="14sp"
            android:textColor="@color/black" />


        <ImageView
            android:id="@+id/github_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contact_me"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="145dp"
            android:adjustViewBounds="true"
            android:maxWidth="80dp"
            android:maxHeight="80dp"
            android:scaleType="fitCenter"
            android:src="@drawable/github_logo"
            tools:ignore="NotSibling" />

        <TextView
            android:id="@+id/txt_gmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="170dp"
            android:layout_below="@+id/github_pic"
            android:text="@string/gmail"
            android:textSize="14sp"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/phone_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contact_me"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="250dp"
            android:adjustViewBounds="true"
            android:maxWidth="80dp"
            android:maxHeight="80dp"
            android:scaleType="fitCenter"
            android:src="@drawable/communications"
            tools:ignore="NotSibling" />

        <TextView
            android:id="@+id/txt_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="275dp"
            android:layout_below="@+id/phone_pic"
            android:text="@string/phone"
            android:textSize="14sp"
            android:textColor="@color/black" />

        <View
            android:id="@+id/contact_view"
            android:layout_width="400dp"
            android:layout_height="2dp"
            android:layout_below="@+id/txt_gmail"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:background="@color/black" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/find"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/find_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/find_me"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/maps_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/find_me"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="140dp"
            android:adjustViewBounds="true"
            android:maxWidth="80dp"
            android:maxHeight="80dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_map"
            tools:ignore="NotSibling" />

        <TextView
            android:id="@+id/txt_maps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="145dp"
            android:layout_below="@+id/maps_pic"
            android:text="@string/my_maps"
            android:textSize="14sp"
            android:textColor="@color/black" />


    </RelativeLayout>






</LinearLayout>